kong-api-demo/api/api-dummy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-iam-api-deployment
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-iam-api
  template:
    metadata:
      labels:
        app: customer-iam-api
    spec:
      containers:
      - name: customer-iam-api
        image: fvillanuevape/customer-iam-api:v1
        ports:
        - containerPort: 8080
          imagePullPolicy: Always
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: customer-iam-api-service
  namespace: apps
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: customer-iam-api
